--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.2.0",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.10.5",
     "react": "^18.2.0",
